--- a/Vidly2/Vidly2.csproj
+++ b/Vidly2/Vidly2.csproj
@@ -175,15 +175,41 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201607222037208_initialModel.cs" />
+    <Compile Include="Migrations\201607222037208_initialModel.Designer.cs">
+      <DependentUpon>201607222037208_initialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607222225224_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201607222225224_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201607222225224_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607222238118_AddMembershipType.cs" />
+    <Compile Include="Migrations\201607222238118_AddMembershipType.Designer.cs">
+      <DependentUpon>201607222238118_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607222243437_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201607222243437_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201607222243437_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607222301469_AddDBAnnotationToCustomerName.cs" />
+    <Compile Include="Migrations\201607222301469_AddDBAnnotationToCustomerName.Designer.cs">
+      <DependentUpon>201607222301469_AddDBAnnotationToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\aspnet-Vidly2-20160720114030.mdf" />
+    <Content Include="App_Data\aspnet-Vidly2-20160720114030_log.ldf">
+      <DependentUpon>aspnet-Vidly2-20160720114030.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-lumen.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -244,9 +270,7 @@
     <Content Include="Views\Customer\Details.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -254,6 +278,23 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201607222037208_initialModel.resx">
+      <DependentUpon>201607222037208_initialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607222225224_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201607222225224_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607222238118_AddMembershipType.resx">
+      <DependentUpon>201607222238118_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607222243437_PopulateMembershipTypes.resx">
+      <DependentUpon>201607222243437_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607222301469_AddDBAnnotationToCustomerName.resx">
+      <DependentUpon>201607222301469_AddDBAnnotationToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
