--- a/Vidly2/Vidly2.csproj
+++ b/Vidly2/Vidly2.csproj
@@ -195,13 +195,48 @@
     <Compile Include="Migrations\201607222301469_AddDBAnnotationToCustomerName.Designer.cs">
       <DependentUpon>201607222301469_AddDBAnnotationToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201607231158386_addedMembershipTypeName.cs" />
+    <Compile Include="Migrations\201607231158386_addedMembershipTypeName.Designer.cs">
+      <DependentUpon>201607231158386_addedMembershipTypeName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607231203503_PopulateMembershipTypeNames.cs" />
+    <Compile Include="Migrations\201607231203503_PopulateMembershipTypeNames.Designer.cs">
+      <DependentUpon>201607231203503_PopulateMembershipTypeNames.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607231852568_AddBirthDateToCustomer.cs" />
+    <Compile Include="Migrations\201607231852568_AddBirthDateToCustomer.Designer.cs">
+      <DependentUpon>201607231852568_AddBirthDateToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607240224277_AddGenreToMovie.cs" />
+    <Compile Include="Migrations\201607240224277_AddGenreToMovie.Designer.cs">
+      <DependentUpon>201607240224277_AddGenreToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607240232295_AddGenreModel.cs" />
+    <Compile Include="Migrations\201607240232295_AddGenreModel.Designer.cs">
+      <DependentUpon>201607240232295_AddGenreModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607240241176_PopulateGenres.cs" />
+    <Compile Include="Migrations\201607240241176_PopulateGenres.Designer.cs">
+      <DependentUpon>201607240241176_PopulateGenres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607240416387_AddDateColumnsToMovie.cs" />
+    <Compile Include="Migrations\201607240416387_AddDateColumnsToMovie.Designer.cs">
+      <DependentUpon>201607240416387_AddDateColumnsToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607250614106_ApplyStringLengthAnnotationToMovieName.cs" />
+    <Compile Include="Migrations\201607250614106_ApplyStringLengthAnnotationToMovieName.Designer.cs">
+      <DependentUpon>201607250614106_ApplyStringLengthAnnotationToMovieName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\CustomerFormViewModel.cs" />
+    <Compile Include="Models\MovieFormViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -269,6 +304,9 @@
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Customer\Details.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Movie\Details.cshtml" />
+    <Content Include="Views\Customer\CustomerForm.cshtml" />
+    <None Include="Views\Movie\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -294,6 +332,30 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201607222301469_AddDBAnnotationToCustomerName.resx">
       <DependentUpon>201607222301469_AddDBAnnotationToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607231158386_addedMembershipTypeName.resx">
+      <DependentUpon>201607231158386_addedMembershipTypeName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607231203503_PopulateMembershipTypeNames.resx">
+      <DependentUpon>201607231203503_PopulateMembershipTypeNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607231852568_AddBirthDateToCustomer.resx">
+      <DependentUpon>201607231852568_AddBirthDateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607240224277_AddGenreToMovie.resx">
+      <DependentUpon>201607240224277_AddGenreToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607240232295_AddGenreModel.resx">
+      <DependentUpon>201607240232295_AddGenreModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607240241176_PopulateGenres.resx">
+      <DependentUpon>201607240241176_PopulateGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607240416387_AddDateColumnsToMovie.resx">
+      <DependentUpon>201607240416387_AddDateColumnsToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607250614106_ApplyStringLengthAnnotationToMovieName.resx">
+      <DependentUpon>201607250614106_ApplyStringLengthAnnotationToMovieName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
